[package]
name = "income-tracker"
version = "0.1.0"
authors = ["nyakiomaina <carolinenyakio21@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "Budget your income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]
name = "budgeter"
indentifier = "io.github.nyakiomaina.income-tracker"

